objects/FST_Service_Incident_Form__c.object
<CustomObject>
    <fields>
        <fullName>OneC_Major_Component_Failure_Group__c</fullName>
        <label>Major Component Failure Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Engine_Failure_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MAJOR COMP GROUP</fullName>
                </value>
                <value>
                    <fullName>AB - O-TRF SWITCH BATTERY CHARGER</fullName>
                </value>
                <value>
                    <fullName>AC - CENTINAL</fullName>
                </value>
                <value>
                    <fullName>AE - CENSE</fullName>
                </value>
                <value>
                    <fullName>AL - LEFT-BANK ENGINE HARNESS</fullName>
                </value>
                <value>
                    <fullName>AM - CENSE</fullName>
                </value>
                <value>
                    <fullName>AR - REPOWER KIT</fullName>
                </value>
                <value>
                    <fullName>AS - C-CAMP 8812 O-TRF SWITCH SW</fullName>
                </value>
                <value>
                    <fullName>BA - BALANCER(B SERIES)</fullName>
                </value>
                <value>
                    <fullName>BB - CRANKCASE VENT</fullName>
                </value>
                <value>
                    <fullName>BC - CAMSHAFT</fullName>
                </value>
                <value>
                    <fullName>BD - GEAR HOUSING</fullName>
                </value>
                <value>
                    <fullName>BE - VIBRATION DAMPER</fullName>
                </value>
                <value>
                    <fullName>BF - FLYWHEEL &amp; RING GEAR</fullName>
                </value>
                <value>
                    <fullName>BG - GEAR COVER (FRONT)</fullName>
                </value>
                <value>
                    <fullName>BH - GEAR COVER (REAR)</fullName>
                </value>
                <value>
                    <fullName>BI - INJECTOR CAMSHAFT</fullName>
                </value>
                <value>
                    <fullName>BK - BLOCK</fullName>
                </value>
                <value>
                    <fullName>BL - LINER GROUP</fullName>
                </value>
                <value>
                    <fullName>BM - CRANK SEAL</fullName>
                </value>
                <value>
                    <fullName>BN - CONNECTING ROD</fullName>
                </value>
                <value>
                    <fullName>BP - PISTON GROUP</fullName>
                </value>
                <value>
                    <fullName>BR - PISTON RING GROUP</fullName>
                </value>
                <value>
                    <fullName>BS - CRANKSHAFT</fullName>
                </value>
                <value>
                    <fullName>BV - CAMSHAFT-VALVE</fullName>
                </value>
                <value>
                    <fullName>BZ - NAME PLATE</fullName>
                </value>
                <value>
                    <fullName>CB - CIRCUIT BREAKERS</fullName>
                </value>
                <value>
                    <fullName>CC - COMPUCRUISE</fullName>
                </value>
                <value>
                    <fullName>CH - CYLINDER HEAD</fullName>
                </value>
                <value>
                    <fullName>CK - COMPUCHECK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Mark_if_Guidanz_was_unavailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark if Guidanz was unavailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Mark_if_MOVEX_was_unavailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark if MOVEX was unavailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Power Generation</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Number_of_technicians_contacted__c</fullName>
        <label>Number of technicians contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneC_Open_or_Closed_Incident__c</fullName>
        <label>Open or Closed Incident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Phone_No_2__c</fullName>
        <formula>OneC_Second_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone No 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Phone_No_3__c</fullName>
        <formula>OneC_Third_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone No 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Phone_No__c</fullName>
        <formula>OneC_Initial_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Position_2__c</fullName>
        <formula>OneC_Second_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Position_3__c</fullName>
        <formula>OneC_Third_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Position__c</fullName>
        <formula>OneC_Initial_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Posted_speed_limit_at_location__c</fullName>
        <label>Posted speed limit at location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Rego_No__c</fullName>
        <formula>OneC_ESN__r.Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rego No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Related_Guidanz_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Guidanz Number</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>FST/Service Incident Forms (Related WO No (if applicable))</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Related_Service_IR_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service IR No</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FST_Service_Incident_Form__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Service Incident Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FST_Service_Incident_Form__c</referenceTo>
        <relationshipLabel>FST/Service Incident Forms</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Related_Travel_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Travel Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FST_Service_Incident_Form__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>FST Travel Plan Form</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FST_Service_Incident_Form__c</referenceTo>
        <relationshipLabel>FST/Service Incident Forms (Related Travel Plan)</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Related_WO_No_if_applicable__c</fullName>
        <label>Related WO No (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_Resolution_Comments__c</fullName>
        <label>Resolution/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OneC_Second_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FST/Service Incident Forms (Second Contact)</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>OneC_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Sub_Component_Failure_Group__c</fullName>
        <label>Sub Component Failure Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OneC_Major_Component_Failure_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PLACE HOLDER</fullName>
                </value>
                <value>
                    <fullName>RP - ONAN CLAIM CODING</fullName>
                </value>
                <value>
                    <fullName>CO - O-COVER</fullName>
                </value>
                <value>
                    <fullName>DD - O-DIODE/RECTIFIER</fullName>
                </value>
                <value>
                    <fullName>DL - O-DECAL,LABEL,SILKSCREEN,TAG</fullName>
                </value>
                <value>
                    <fullName>FH - O-FUSE HOLDER</fullName>
                </value>
                <value>
                    <fullName>HS - O-HOUSING/PANEL/POST/RAIL</fullName>
                </value>
                <value>
                    <fullName>MA - O-METER-AMP</fullName>
                </value>
                <value>
                    <fullName>MD - O-MOUNT-CABLE TIE</fullName>
                </value>
                <value>
                    <fullName>ML - O-BOLT/STUD</fullName>
                </value>
                <value>
                    <fullName>SC - O-SCRASSY</fullName>
                </value>
                <value>
                    <fullName>TC - O-TERMINAL</fullName>
                </value>
                <value>
                    <fullName>TN - O-NUT</fullName>
                </value>
                <value>
                    <fullName>VF - O-FUSE</fullName>
                </value>
                <value>
                    <fullName>WF - O-WASHER-FLAT</fullName>
                </value>
                <value>
                    <fullName>WH - O-WIRING HARNESS/LEADS</fullName>
                </value>
                <value>
                    <fullName>WL - O-WASHER-LOCK</fullName>
                </value>
                <value>
                    <fullName>WT - O-TIE-CABLE</fullName>
                </value>
                <value>
                    <fullName>XF - O-TRANSFORMER-VOLTAGE</fullName>
                </value>
                <value>
                    <fullName>YT - O-SWITCH-ROTARY/SELECTOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneC_Third_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FST/Service Incident Forms (Third Contact)</relationshipLabel>
        <relationshipName>FST_Service_Incident_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneC_Time_FST_will_have_worked_12_hours__c</fullName>
        <label>Time FST will have worked 12 hours</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneC_Total_number_of_hours_worked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total number of hours worked</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneC_Using_Account_w_25_Mark_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Using Account w/ 25% Mark Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneC_Van_Rego_No__c</fullName>
        <label>Van Rego No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneC_hours_FST_worked_since_last_10_hr__c</fullName>
        <label># hours FST worked since last 10 hr</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_auth_information__c</fullName>
        <label>Pre-auth information:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_out_of_hours__c</fullName>
        <label>Technician out of hours?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Vehicle Towed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FST/Service Incident Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OneC_Service_Request__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FST/Service Incident Forms</pluralLabel>
    <recordTypes>
        <fullName>FST_Travel_Plan_Form</fullName>
        <active>true</active>
        <label>FST Travel Plan Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Incident_Form</fullName>
        <active>true</active>
        <label>Service Incident Form</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OneC_Closing_Fields_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(OneC_Open_or_Closed_Incident__c , &quot;Closed&quot;),
OR(
ISBLANK( OneC_Date_and_Time_Repair_Completed__c ),
ISBLANK(TEXT( Engine_Failure_Group__c )),
ISBLANK(TEXT( OneC_Major_Component_Failure_Group__c)),
ISBLANK(TEXT( OneC_Has_the_FST_returned_home_safely__c )),
ISBLANK(TEXT( OneC_Advised_driver_of_safety_assessment__c ))
)
)</errorConditionFormula>
        <errorMessage>When the Incident form is set to Closed, Make sure the following information is filled out:
Date and Time Repair Completed, Engine Failure Group, Major Component Failure Group, Has the FST returned home safely, Advised Driver of safety assessment.</errorMessage>
    </validationRules>
</CustomObject>